--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<your-github-username>.github.io/<your-repo-name>",
+  
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@tsparticles/all": "^3.9.1",
@@ -26,6 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
